Update travis config for run tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,23 +4,34 @@ sudo: false
 
 php:
   - 5.6
+  - 7.0
+  - 7.1
+  - 7.2
 
-env:
-  global:
-    - DB_USER=root
-    - DB_HOST=localhost
-    - DB_NAME=test_prestashop
+matrix:
+  include:
+  - php: 5.3
+    dist: precise
+    env: BRANCH=1.6.1.x
+  - php: 5.4
+    env: BRANCH=1.6.1.x
+  - php: 5.5
+    env: BRANCH=1.6.1.x
+  - php: 5.6
+    env: BRANCH=1.6.1.x
+  - php: 7.0
+    env: BRANCH=1.6.1.x
+  - php: 7.1
+    env: BRANCH=1.6.1.x
+  - php: 7.2
+    env: BRANCH=1.6.1.x
 
 before_script:
   - bash tests/bin/clone_prestashop.sh
-  - cd ../PrestaShop
-  - cp tests/parameters.yml.travis app/config/parameters.yml
-  - bash travis-scripts/install-prestashop
+  - bash tests/bin/before_script.sh
 
 script:
-  - cd $TRAVIS_BUILD_DIR
   - bash tests/bin/script.sh
-  - php ../PrestaShop/vendor/bin/phpunit -c phpunit.xml.dist
 
 deploy:
   skip_cleanup: true
