--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,6 @@ sudo: required
 dist: trusty
 
 php:
-  - 5.6
-  - 7.0
   - 7.1
   - 7.2
 
@@ -32,11 +30,11 @@ before_script:
 script:
   - bash tests/bin/script.sh
 
-deploy:
-  skip_cleanup: true
-  provider: script
-  script: make
-  on:
-    php: 7.2
-    branch: master
-    condition: "$DEPLOY = true"
+#deploy:
+#  skip_cleanup: true
+#  provider: script
+#  script: make
+#  on:
+#    php: 7.2
+#    branch: master
+#    condition: "$DEPLOY = true"
