--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,11 @@ php:
 matrix:
   include:
   - php: 5.6
-    env: BRANCH=1.6.1.x
+    env: BRANCH=1.6.1.x COMPOSER_IN_TESTS=1
   - php: 7.0
-    env: BRANCH=1.6.1.x
+    env: BRANCH=1.6.1.x COMPOSER_IN_TESTS=1
   - php: 7.1
-    env: BRANCH=1.6.1.x
+    env: BRANCH=1.6.1.x COMPOSER_IN_TESTS=1
 
 before_script: make before_script
 
