--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -30,4 +30,7 @@
             </exclude>
         </whitelist>
     </filter>
+    <logging>
+        <log type="coverage-clover" target="coverage.xml"/>
+    </logging>
 </phpunit>
