--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 os: linux
+dist: trusty
 
 language: php
 
@@ -8,7 +9,12 @@ addons:
       - apache2
       - libapache2-mod-fastcgi
 
-dist: trusty
+before_script: make before_script
+
+script: make test
+
+stages:
+  - test
 
 jobs:
   include:
@@ -66,10 +72,6 @@ jobs:
     - php: 7.2
       env: BRANCH=1.7.5.x
       after_success: bash <(curl -s https://codecov.io/bash)
-
-before_script: make before_script
-
-script: phpunit
 
 #deploy:
 #  skip_cleanup: true
