--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ jobs:
       before_deploy:
         - export VERSION=`cat VERSION`
         - export ARCHIVE_NAME=/tmp/retailcrm-$VERSION.zip
-        - git config --local user.name "retailCRM"
+        - git config --local user.name "RetailCRM"
         - git config --local user.email "support@retailcrm.ru"
         - export TRAVIS_TAG=v$VERSION
         - git tag $TRAVIS_TAG
