--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,7 +12,7 @@
         syntaxCheck="true"
 >
     <testsuites>
-        <testsuite name="PrestaShop retailCRM Test Suite">
+        <testsuite name="PrestaShop RetailCRM Test Suite">
             <directory suffix="Test.php">tests</directory>
             <exclude>tests/helpers</exclude>
         </testsuite>
