--- a/.github/workflows/presta.yml
+++ b/.github/workflows/presta.yml
@@ -153,7 +153,7 @@ jobs:
           git fetch origin --unshallow --tags
           export LAST_TAG=`git describe --abbrev=0 --tags`
           export VERSION=`cat VERSION`
-          export ARCHIVE_NAME=retailcrm-$VERSION.ocmod.zip
+          export ARCHIVE_NAME=retailcrm-$VERSION.zip
           export ARCHIVE_PATH="/tmp/$ARCHIVE_NAME"
           export RELEASE_TAG=v$VERSION
           export LAST_COMMIT=`git log --oneline --format=%B -n 1 HEAD | head -n 1`
