--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ retailcrm/views/css/less/*.map
 retailcrm/views/css/*.css
 retailcrm/views/css/*.map
 !retailcrm/views/css/*.min.css
-retailcrm/config_*.xml
+retailcrm/config*.xml
+retailcrm/custom
 coverage.xml
