--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ retailcrm/views/css/less/*.map
 retailcrm/views/css/*.css
 retailcrm/views/css/*.map
 !retailcrm/views/css/*.min.css
+retailcrm/views/js/*.map
 retailcrm/config*.xml
 retailcrm/custom
 coverage.xml
