--- a/.github/workflows/presta.yml
+++ b/.github/workflows/presta.yml
@@ -17,21 +17,19 @@ jobs:
           - php-version: '7.1'
             branch: '1.7.7.0'
             composerv1: 1
-            phpunit-version: 'phpunit:6.4.3'
           - php-version: '7.2'
             branch: '1.7.7.0'
             composerv1: 1
-            phpunit-version: 'phpunit:6.4.3'
+          - php-version: '7.3'
+            branch: '1.7.7.0'
+            composerv1: 1
           - php-version: '7.1'
-            branch: '1.7.7.8'
-            composerv1: 1
-            phpunit-version: 'phpunit:6.4.3'
-          - php-version: '7.2'
-            branch: '1.7.7.8'
-            composerv1: 1
+            branch: '1.7.8.10'
             coverage: 1
-            phpunit-version: 'phpunit:6.4.3'
-
+          - php-version: '7.2'
+            branch: '1.7.8.10'
+          - php-version: '7.3'
+            branch: '1.7.8.10'
     services:
       mysql:
         image: mysql:5.7
@@ -47,7 +45,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
           coverage: xdebug
-          tools: composer:v2, ${{ matrix.phpunit-version }}
+          tools: composer:v2, phpunit:6.4.3
           extensions: gd, mbstring, zip, mcrypt, pdo_mysql, dom
       - name: Start mysql service
         run: sudo /etc/init.d/mysql start
@@ -60,7 +58,7 @@ jobs:
           BRANCH: ${{ matrix.branch }}
           COMPOSERV1: ${{ matrix.composerv1 }}
           MYSQL_PORT: ${{ job.services.mysql.ports['3306'] }}
-        run: make before_script
+        run: make install_prestashop
       - name: Run tests
         env:
           BRANCH: ${{ matrix.branch }}
